@startuml

Title "UC24 - Request an operation"

package "Domain"{

class OperationRequest{
    - OperationRequestId
    - Priority
    - DeadlineDate
    - MedicalRecordNumber
    - StaffId
    - OperationTypeID
    + OperationRequest(OperationRequestId id, Priority priority, DeadlineDate date, PatientID patientID, LicenseNumber LicenseNumber, OperationTypeID operationTypeID)
}

class OperationRequestID{
    + OperationRequestID(String value)
}

Enum Priority{
    + ElectiveSurgery
    + UrgentSurgery
    + EmergencySurgery
}

class DeadlineDate{
    + Deadline(Date value)
}

class OperationTypeID{
    + OperationTypeID(String value)
}

class MedicalRecordNumber{
    + MedicalRecordNumber(String value)
}

class StaffId{
    + StaffId(String value)
}

}

package "DTO"{

class OperationRequestDTO{
    - Id
    - Priority
    - DeadlineDate
    - MedicalRecordNumber
    - StaffId
    - OperationTypeID
}

class OperationRequestMapper{
    + ToDomain(OperationRequestDTO dto, OperationRequestID)
    + ToDTO(OperationRequest request)
}
}

package "Controllers"{

class OperationRequestsController{
    + GetAll()
    + GetById(OperationRequestID id)
    + FilterOperationRequests(List<OperationRequestDTO> operationRequests)
    + Create(OperationRequestDTO dto)
    + Update(OperationRequestID id, OperationRequestDTO dto)
    + SoftDelete(OperationRequestID id)
    + HardDelete(OperationRequestID id)
}

}

package "Services"{
    class OperationRequestService{
        + GetAllAsync()
        + GetByIdAsync(OperationRequestID id)
        + FilterAsync(List<OperationRequestDTO> operationRequests)
        + AddAsync(OperationRequestDTO DTO)
        + UpdateAsync(OperationRequestDTO DTO)
        + InactivateAsync(OperationRequestId id)
        + DeleteAsync(OperationRequestId id)
    }
}

package "Repositories"{

interface IOperationRequestRepository{
}

interface OperationRequestRepository{
}

class BaseRepository{
====
Base Project class
====
}

}

OperationRequestsController -> OperationRequestService
OperationRequestService --> OperationRequestMapper : uses
OperationRequestService --> OperationRequestDTO : uses

OperationRequestMapper --> OperationRequestDTO : maps domain to
OperationRequestMapper <-- OperationRequest : enters

OperationRequest --> OperationRequestID : has a
OperationRequest --> Priority : has a
OperationRequest --> DeadlineDate : has a
OperationRequest --> MedicalRecordNumber : will be performed at a Patient with a 
OperationRequest --> StaffId : will be performed by a Doctor with a
OperationRequest --> OperationTypeID : has a

OperationRequestService --> OperationRequestRepository

OperationRequestRepository --|> BaseRepository
OperationRequestRepository --|> IOperationRequestRepository

@enduml